<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Settings.SettingsFragment">

    <TextView
        android:id="@+id/font_size"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/font_size"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="133dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/font_family"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/font_size" />

    <Spinner
        android:id="@+id/fontFamily"
        android:layout_width="248dp"
        android:layout_height="34dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/fontSize" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="146dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="14dp"
        android:text="@string/line_spacing"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/lineSpacing"
        android:layout_width="139dp"
        android:layout_height="36dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/fontFamily" />

    <com.flask.colorpicker.ColorPickerView
        android:id="@+id/color_picker_view"
        android:layout_width="396dp"
        android:layout_height="248dp"
        android:layout_marginTop="16dp"
        app:alphaSlider="true"
        app:alphaSliderView="@+id/v_alpha_slider"
        app:density="12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineSpacing"
        app:lightnessSlider="true"
        app:lightnessSliderView="@+id/v_lightness_slider"
        app:wheelType="FLOWER" />

    <com.flask.colorpicker.slider.LightnessSlider
        android:id="@+id/v_lightness_slider"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_picker_view" />

    <Spinner
        android:id="@+id/fontSize"
        android:layout_width="203dp"
        android:layout_height="39dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/font_size"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="188dp"
        android:layout_marginRight="188dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_lightness_slider" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/update_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/v_lightness_slider" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/color_picker_view"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/change_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toEndOf="@+id/color_picker_view"
        app:layout_constraintTop_toBottomOf="@+id/lineSpacing" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/warning_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/color_picker_view"
        app:layout_constraintTop_toBottomOf="@+id/languageSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>